# pypyls

./: .gitignore  README.md  pyproject.toml
pyls/: __init__.py  _version.py  base.py  compute.py  io.py  structures.py  utils.py
pyls/examples/: __init__.py  datasets.py
pyls/matlab/: __init__.py  io.py
pyls/plotting/: meancentered.py
pyls/tests/: __init__.py  conftest.py  matlab.py  test_base.py  test_compute.py  test_examples.py  test_io.py  test_matlab.py  test_structures.py  test_utils.py
pyls/tests/types/: test_regression.py  test_svd.py
pyls/types/: __init__.py  behavioral.py  meancentered.py  regression.py
